fix: text overflow inside button for multi line text

--- a/crowdsource-fe/src/components/Button/Button.module.scss
+++ b/crowdsource-fe/src/components/Button/Button.module.scss
@@ -5,14 +5,14 @@
   display: flex;
   font-size: 1rem;
   font-weight: bold;
-  height: 2.75rem;
   justify-content: center;
-  padding: 0 1.5rem;
+  min-height: 2.75rem;
+  padding: 0.5rem 1.5rem;
   width: 100%;
 
   @include media-breakpoint-up(md) {
     font-size: 1.125rem;
-    height: 3rem;
+    min-height: 3rem;
     min-width: 12.5rem;
     width: auto;
   }
@@ -45,14 +45,14 @@
   display: flex;
   font-size: 1rem;
   font-weight: bold;
-  height: 2.75rem;
   justify-content: center;
-  padding: 0 1.5rem;
+  min-height: 2.75rem;
+  padding: 0.5rem 1.5rem;
   width: 100%;
 
   @include media-breakpoint-up(md) {
     font-size: 1.125rem;
-    height: 3rem;
+    min-height: 3rem;
     min-width: 12.5rem;
     width: auto;
   }
@@ -82,14 +82,14 @@
   border-radius: var(--border-radius-24);
   display: flex;
   font-size: 1rem;
-  height: 2.75rem;
   justify-content: center;
-  padding: 0 1.5rem;
+  min-height: 2.75rem;
+  padding: 0.5rem 1.5rem;
   width: 100%;
 
   @include media-breakpoint-up(md) {
     font-size: 1.125rem;
-    height: 3rem;
+    min-height: 3rem;
     min-width: 12.5rem;
     width: auto;
   }
