--- a/crowdsource-fe/src/styles/custom.scss
+++ b/crowdsource-fe/src/styles/custom.scss
@@ -535,6 +535,7 @@ $btn-focus-box-shadow: none;
 $input-color: var(--primary-color);
 $btn-border-width: 0;
 $input-disabled-bg: transparent;
+$btn-line-height: 1;
 
 :root {
   /* Z-Indexes */
